<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

  <group>
    <item
        android:id="@+id/Strona_Glowna"
        android:orderInCategory="100"
        android:title="@string/strona_g_wna"
        android:icon="@drawable/log_out"
        app:showAsAction="never" />
    <item
        android:id="@+id/Promocje"
        android:orderInCategory="100"
        android:title="@string/promocje"
        android:icon="@drawable/profile"
        app:showAsAction="never" />
      <item
          android:id="@+id/Nowosci"
          android:orderInCategory="100"
          android:title="@string/nowo_ci"
          android:icon="@drawable/profile"
          app:showAsAction="never" />
      <item
          android:id="@+id/Twoj_Profil"
          android:orderInCategory="100"
          android:title="@string/tw_j_profil"
          android:icon="@drawable/profile"
          app:showAsAction="never" />
      <item
          android:id="@+id/Pomoc"
          android:orderInCategory="100"
          android:title="@string/pomoc"
          android:icon="@drawable/profile"
          app:showAsAction="never" />
      <item
          android:id="@+id/Regulamin"
          android:orderInCategory="100"
          android:title="@string/regulamin"
          android:icon="@drawable/profile"
          app:showAsAction="never" />
  </group>

</menu>
